@@ -37,6 +37,7 @@ where XXXXXX is the bug number as listed below.
 
 308729  vex x86->IR: unhandled instruction bytes 0xf 0x5 (syscall) 
 325714  Empty vgcore but RLIMIT_CORE is big enough (too big) 
+325856  Make SGCheck fail gracefully on unsupported platforms
 326444  Cavium MIPS Octeon Specific Load Indexed Instructions
 326462  Refactor vgdb to isolate invoker stuff into separate module
 326983  Clear direction flag after tests on amd64.
